# experimental

./: CMakeLists.txt  eddy.h  eddyserver.h  eddyserver.sln  eddyserver.vcxproj  eddyserver.vcxproj.filters
core/base/: CMakeLists.txt  base.h
core/base/base/: TaskQueue.cpp
core/eddy/: CMakeLists.txt
core/eddy/eddy/: IOServiceThread.cpp  IOServiceThread.h  IOServiceThreadManager.h  TCPClient.cpp  TCPServer.h  TCPSession.cpp  TCPSession.h  TCPSessionHandler.cpp  TCPSessionHandler.h  TCPSessionQueue.h
core/network/: CMakeLists.txt  network.h
core/network/docs/: findcpp.py
core/network/network/: DefaultMessageFilter.cpp  DefaultMessageFilter.h  IDGenerator.h  IOServiceThread.cpp  IOServiceThread.h  IOServiceThreadManager.cpp  IOServiceThreadManager.h  MessageFilterInterface.h  NetMessage.cpp  NetMessage.h  TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h  TCPSession.cpp  TCPSession.h  TCPSessionHandler.cpp  TCPSessionHandler.h  TCPSessionQueue.cpp  TCPSessionQueue.h  Types.h
eddy/: io_service_thread.cpp  io_service_thread.h  io_service_thread_manager.cpp  io_service_thread_manager.h  message_filter.cpp  net_message.cpp  net_message.h  task_queue.h  tcp_client.cpp  tcp_server.cpp  tcp_session.cpp  tcp_session.h  tcp_session_handle.cpp  tcp_session_handle.h  tcp_session_queue.cpp  tcp_session_queue.h  types.h
eddyserver/: id_generator.h  io_service_thread.cpp  io_service_thread.h  io_service_thread_manager.cpp  io_service_thread_manager.h  message_filter.cpp  message_filter.h  net_message.cpp  net_message.h  task_queue.cpp  task_queue.h  tcp_client.cpp  tcp_client.h  (+9 more)
eddyserver/base/: CMakeLists.txt
eddyserver/base/base/: Any.h  StringHelper.cpp  StringHelper.h
eddyserver/eddy/: CMakeLists.txt  eddy.h
eddyserver/eddy/doc/: Readme.md
eddyserver/eddy/docs/: findcpp.py
eddyserver/eddy/eddy/: DefaultMessageFilter.cpp  DefaultMessageFilter.h  IDGenerator.h  IOServiceThread.cpp  IOServiceThread.h  IOServiceThreadManager.cpp  IOServiceThreadManager.h  MessageFilterInterface.h  NetMessage.cpp  NetMessage.h  SimpleMessageFilter.cpp  SimpleMessageFilter.h  TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h  TCPSession.cpp  TCPSession.h  TCPSessionHandle.cpp  TCPSessionHandle.h  TCPSessionHandler.h  TCPSessionQueue.cpp  TCPSessionQueue.h  TaskQueue.cpp  TaskQueue.h  Types.h  message_filter.cpp  net_message.cpp  task_queue.h  tcp_client.h  tcp_session.h  tcp_session_handle.h  types.h
module/Common/: CMakeLists.txt  common.h
module/Common/common/: Any.h  CRC32.h  ConfigManager.cpp  ConfigManager.h  MD5.cpp  MD5.h  Module.h  ModuleManager.cpp  Path.cpp  Path.h  Singleton.h  StringHelper.cpp  StringHelper.h  TaskPools.h
module/DBClient/: CMakeLists.txt  DBClient.cpp  DBClient.h  DBClientManager.cpp  DBClientManager.h  DBResult.cpp  DBResult.h  Main.cpp  WrapResult.h
module/DBClient/proto/: db.request.pb.cc  db.request.pb.h  db.response.pb.cc  db.response.pb.h
module/DBProxy/: CMakeLists.txt  Connector.h  ConnectorMySQL.h  Main.cpp  MainHandler.cpp  MainHandler.h  ProcessManager.cpp  ProcessManager.h  ProxyImpl.h  ProxyManager.cpp  ProxyManager.h  ProxyTypes.h  SessionHandle.cpp  SessionHandle.h  TaskQueue.h  Types.h  WrapResult.h  config.json
module/DBProxy/DBProxy/Private/: Connector.h  ConnectorMySQL.h  ContainerSafe.h  Main.cpp  ProxyManager.h  SafeContainer.h  TaskPools.cpp  TaskPools.h  TaskQueue.cpp  TaskQueue.h  Types.h
module/DBProxy/DBProxy/Public/: ResultWrap.h
module/DBProxy/DBProxy/Public/proto/: db.response.proto
module/DBProxy/proto/: db.request.pb.cc  db.request.pb.h  db.request.proto  db.response.pb.cc  db.response.pb.h  db.response.proto
module/GWClient/: CMakeLists.txt  GWClient.cpp
module/GatewayServer/: CMakeLists.txt  GatewayManager.cpp  GatewayManager.h  Main.cpp  ServerManager.cpp  ServerManager.h  SessionHandle.cpp  SessionHandle.h
module/LoginServer/: CMakeLists.txt  GlobalObject.cpp  GlobalObject.h  LoginManager.cpp  LoginManager.h  Main.cpp  Register.cpp  Register.h  ServerConfig.cpp  ServerConfig.h  SessionHandle.cpp  SessionHandle.h  TokenGenerator.h  config.LoginServer.json
module/LoginServer/sql/: db_verify.sql
module/Protocol/: CMakeLists.txt  InitProtoDescriptor.cpp  generate.py  protoc_all.py  protocall.py
module/Protocol/code/: InitDescriptor.h  MessageHelper.cpp  MessageHelper.h  ProtobufCodec.cpp  ProtobufCodec.h  ProtobufDispatcher.h
module/Protocol/code/proto/: client_link.pb.cc  client_link.pb.h  client_login.pb.cc  client_login.pb.h  internal.pb.cc  internal.pb.h  pub_login.pb.cc  pub_login.pb.h  public_enum.pb.cc  public_enum.pb.h  public_struct.pb.cc  public_struct.pb.h  server_internal.pb.cc  server_internal.pb.h
module/Protocol/cpp/: MessageHelper.cpp  MessageHelper.h
module/Protocol/cpp/proto/: InitProtoDescriptor.cpp  InitProtoDescriptor.h  MessageHelper.cpp  MessageHelper.h  externall.protocol.pb.cc  externall.protocol.pb.h  global.Heartbeat.pb.cc  global.Heartbeat.pb.h  internal.protocol.pb.cc  internal.protocol.pb.h
module/Protocol/cpp/proto/dbproxy/: dbproxy.Request.pb.cc  dbproxy.Request.pb.h  dbproxy.Response.pb.cc  dbproxy.Response.pb.h
module/Protocol/db/: db.request.proto  db.response.proto
module/Protocol/proto/: client_link.proto  client_login.proto  externall.protocol.proto  global.Heartbeat.proto  internal.proto  internal.protocol.proto  pub_login.proto  public_enum.proto  public_struct.proto  server_internal.proto
module/Protocol/proto/dbproxy/: dbproxy.Request.proto  dbproxy.Response.proto
module/Test/: CMakeLists.txt  Main.cpp
module/Test/proto/: db.request.pb.cc  db.request.pb.h  db.request.proto
module/test/: CMakeLists.txt  Main.cpp
public/Protocol/: CMakeLists.txt
public/Protocol/proto/: client_link.proto  client_logic.proto  client_login.proto  public_enum.proto  server_internal.proto
public/Protocol/src/: InitDescriptor.h  ProtobufCodec.h
public/Protocol/src/proto/: client_link.pb.cc  client_link.pb.h  client_logic.pb.cc  client_logic.pb.h  client_login.pb.cc  client_login.pb.h  public_struct.pb.h  server_internal.pb.cc  server_internal.pb.h
(+104 files in other folders)
