set(CURRENT_PROJECT_NAME Base)

set(CURRENT_PROJECT_SRC_LISTS
  base/StringHelper.cpp
  base/TaskPools.cpp
  base/TaskQueue.cpp
)

add_library(${CURRENT_PROJECT_NAME} ${COMPOLE_LIBRARY_TYPE}
  ${CURRENT_PROJECT_SRC_LISTS}
)

set_target_properties(${CURRENT_PROJECT_NAME}
	PROPERTIES
	OUTPUT_NAME ${BASE_LIBRARY_NAME}
	ARCHIVE_OUTPUT_DIRECTORY ${BINARY_OUTPUT_DIR}
	LIBRARY_OUTPUT_DIRECTORY ${BINARY_OUTPUT_DIR}
)