set(DBCLIENT_SRC_LISTS
  DBClient.cpp
)

include_directories(
  ${ASIO_INCLUDE_DIRS}
  ${EDDY_INCLUDE_DIRS}
  ${PROTOBUF_INCLUDE_DIRS}
  ${PROTOCOL_INCLUDE_DIRS}
)

link_directories(${BINARY_OUTPUT_DIR})

if(BUILD_SHARED_LIBS)
  add_library(DBClient SHARED
    ${DBCLIENT_SRC_LISTS}
  )

  set_target_properties(DBClient
    PROPERTIES
    OUTPUT_NAME ${PROTOCOL_LIBRARY_NAME}
    ARCHIVE_OUTPUT_DIRECTORY ${BINARY_OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY ${BINARY_OUTPUT_DIR}
  )
else()
  add_library(DBClient STATIC
    ${DBCLIENT_SRC_LISTS}
  )
  
  set_target_properties(DBClient
    PROPERTIES
    OUTPUT_NAME ${PROTOCOL_LIBRARY_NAME}
    ARCHIVE_OUTPUT_DIRECTORY ${BINARY_OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY ${BINARY_OUTPUT_DIR}
  )
endif()