set(CURRENT_PROJECT_NAME GatewayServer)

set(CURRENT_PROJECT_SRC_LISTS
  Main.cpp
  SessionHandle.cpp
  GatewayManager.cpp
)

include_directories(
  ${ASIO_INCLUDE_DIRS}
  ${PROTOBUF_INCLUDE_DIRS}
  ${PROTOCOL_INCLUDE_DIRS}
  ${EDDYSERVER_INCLUDE_DIRS}
)

link_directories(${BINARY_OUTPUT_DIR})

add_executable(${CURRENT_PROJECT_NAME} ${CURRENT_PROJECT_SRC_LISTS})

set_target_properties(${CURRENT_PROJECT_NAME}
  PROPERTIES
  RUNTIME_OUTPUT_DIRECTORY
  "${BINARY_OUTPUT_DIR}"
)

target_link_libraries(${CURRENT_PROJECT_NAME}
  ${PROTOBUF_LIBRARY_NAME}
  ${PROTOCOL_LIBRARY_NAME}
  ${EDDYSERVER_LIBRARY_NAME}
)