set(CURRENT_PROJECT_NAME LoginServer)

set(CURRENT_PROJECT_SRC_LISTS 
  Main.cpp
  Logging.cpp
  ServerConfig.cpp
  LoginManager.cpp
  SessionHandle.cpp
)

include_directories(
  ${ASIO_INCLUDE_DIRS}
  ${SPDLOG_INCLUDE_DIRS}
  ${COMMON_INCLUDE_DIRS}
  ${NETWORK_INCLUDE_DIRS}
  ${DBCLIENT_INCLUDE_DIRS}
  ${PROTOBUF_INCLUDE_DIRS}
  ${PROTOCOL_INCLUDE_DIRS}
  ${RAPIDJSON_INCLUDE_DIRS}
)

link_directories(${BINARY_OUTPUT_DIR})

add_executable(${CURRENT_PROJECT_NAME} ${CURRENT_PROJECT_SRC_LISTS})

set_target_properties(${CURRENT_PROJECT_NAME}
  PROPERTIES
  RUNTIME_OUTPUT_DIRECTORY
  "${BINARY_OUTPUT_DIR}"
)

target_link_libraries(${CURRENT_PROJECT_NAME}
  ${COMMON_LIBRARY_NAME}
  ${NETWORK_LIBRARY_NAME}
  ${PROTOBUF_LIBRARY_NAME}
  ${PROTOCOL_LIBRARY_NAME}
  ${DBCLIENT_LIBRARY_NAME}
)